# elowen-api

./: Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md
.github/workflows/: publish-image.yml
migrations/: 0001_threads_messages.sql  0002_devices.sql  0003_jobs.sql  0004_results_approvals.sql  0005_approval_shape_upgrade.sql  0006_job_correlation_audit.sql  0007_message_payloads.sql  0008_ui_sessions.sql  0009_identity_authorization_hardening.sql  0010_generic_jobs.sql  0011_trust_lifecycle.sql  README.md
src/: error.rs  formatting.rs  lib.rs  main.rs  models.rs  state.rs
src/app/: mod.rs
src/auth/: mod.rs
src/db/: approvals.rs  devices.rs  jobs.rs  mod.rs  threads.rs  trust.rs
src/models/: mod.rs  persistence.rs  transport.rs
src/routes/: approvals.rs  auth.rs  devices.rs  jobs.rs  mod.rs  notes.rs  threads.rs  trust.rs
src/services/: conversation.rs  jobs.rs  lifecycle.rs  mod.rs  notes.rs  ui_events.rs
src/trust/: mod.rs
